Added requested changes

--- a/Readiculous.WebApp/Views/Account/RegisterSuccess.cshtml
+++ b/Readiculous.WebApp/Views/Account/RegisterSuccess.cshtml
@@ -1,4 +1,5 @@
 @{
+    ViewBag.LoginView = true;
     ViewData["Title"] = "Registration Complete";
 }
 <link rel="stylesheet" href="~/css/register.css" />
