--- a/Readiculous.WebApp/Views/Home/_EditProfileModal.cshtml
+++ b/Readiculous.WebApp/Views/Home/_EditProfileModal.cshtml
@@ -75,8 +75,8 @@
 
         <!-- Action Buttons -->
         <div class="d-flex justify-content-end gap-2">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-primary">Save Changes</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Save</button>
         </div>
     </form>
 </div>
