[ADD] Book Toaster: Added Toaster to Book Module
Strengthened try-catch mechanics through adding additional InvalidDataOperation Exceptions

--- a/Readiculous.WebApp/Views/Book/Edit.cshtml
+++ b/Readiculous.WebApp/Views/Book/Edit.cshtml
@@ -105,4 +105,11 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/review/review.js"></script>
+    <script>
+        var errorMessage = '@TempData["ErrorMessage"]';
+        if (errorMessage) {
+            toastr.error(errorMessage, 'Error');
+        }
+    </script>
 }
