--- a/Readiculous.WebApp/Views/Book/Index.cshtml
+++ b/Readiculous.WebApp/Views/Book/Index.cshtml
@@ -154,4 +154,10 @@
 
 @section Scripts {
     <script src="~/js/review/review.js"></script>
+    <script>
+        var errorMessage = '@TempData["ErrorMessage"]';
+        if (errorMessage) {
+            toastr.error(errorMessage, 'Error');
+        }
+    </script>
 }
