--- a/Readiculous.WebApp/Views/Shared/Modals/_ForgotPassModal.cshtml
+++ b/Readiculous.WebApp/Views/Shared/Modals/_ForgotPassModal.cshtml
@@ -1,7 +1,8 @@
 ﻿@model Readiculous.WebApp.Models.ForgotPasswordViewModel
 
-<form asp-action="ForgotPassword" asp-controller="User" method="post" novalidate>
+<form asp-action="ForgotPassword" asp-controller="LandingPage" method="post">
     <button type="button" class="modal-close" onclick="closeModal()">×</button>
+
     <img src="~/img/png-logo.png" class="auth-icon" />
     <h2>Reset Your Password</h2>
 
@@ -12,3 +13,7 @@
 
     <a href="javascript:void(0);" onclick="showModal('login')" class="auth-btn back-btn">Back</a>
 </form>
+
+@section Scripts {
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+}
