--- a/Readiculous.WebApp/Views/Shared/_HeaderTest.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_HeaderTest.cshtml
@@ -22,10 +22,6 @@
                         <i class="fa-solid fa-gear"></i>
                         <a href="#">Settings</a>
                     </li>
-                    <li>
-                        <i class="fa-solid fa-right-from-bracket"></i>
-                        <a asp-action="SignOutUser" asp-controller="Account">Logout</a>
-                    </li>
                     <li class="nav-item">
                         <i class="fa-solid fa-users"></i>
                         <a asp-controller="UserMaster" asp-action="UserMasterScreen">User Master</a>
@@ -41,6 +37,10 @@
                     <li class="nav-item">
                         <i class="fa-solid fa-book"></i>
                         <a asp-controller="Book" asp-action="Index">Book</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-right-from-bracket"></i>
+                        <a href="javascript:void(0);" onclick="logoutAdmin()">Logout</a>
                     </li>
                 </ul>
             </div>
@@ -61,3 +61,18 @@
         border-bottom: 1px solid var(--color-text);
     }
 </style>
+<script>
+    function logoutAdmin() {
+        fetch("/Account/SignOutUser", {
+            method: "POST",
+            credentials: "same-origin"
+        })
+        .then(() => {
+            window.location.href = "/UserView/GuestView";
+        })
+        .catch(err => {
+            console.error("Logout failed:", err);
+            alert("Logout failed. Please try again.");
+        });
+    }
+</script>
